# genie

./: Cargo.toml
frontend/: index.html
src/: app.rs  main.rs
src/symbol/: historical_data.rs  mod.rs
