[package]
name = "genie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
csv = "1.3.0"
reqwest = "0.11.24"
rust_decimal = { version = "1.34.3", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
